# sandbox

./: CMakeLists.txt  README
boost/: CMakeLists.txt
boost/activeobjs/: CMakeLists.txt  boost_activeobjs.cc  boost_aop_mt.cc  shared_queue.h
boost/any/: CMakeLists.txt  boost_any.cc
boost/aop/: Active.h  ActiveFuture.h  ActiveMT.h  ActiveST.h  ActiveT.h  CMakeLists.txt  Pipe1.h  Pipe2.h  boost_aop.cc  boost_aop_future.cc  boost_aop_mt.cc  boost_aop_pipe.cc  boost_aop_pipe_v2.cc  boost_aop_pipe_v3.cc  message_queue.h  shared_queue.h
boost/asio/: CMakeLists.txt
boost/expressions/: CMakeLists.txt  boost_expressions.cc
boost/monads/: CMakeLists.txt  monad.cc
boost/thread/: CMakeLists.txt  boost_future.cc  boost_thread.cc
boost/ycombinator/: CMakeLists.txt  boost_ycombinator.cc
cpp/: CMakeLists.txt
cpp/aop/: CMakeLists.txt  cpp11_aop.cc  cpp11_aop_mt.cc  shared_queue.h
cpp/auto/: CMakeLists.txt  auto.cc
cpp/evil_inheritance/: CMakeLists.txt  evil_inheritance.cc
cpp/file_locking/: file_locking.cc
cpp/file_size/: CMakeLists.txt  file_size.cc
cpp/memory_exhaust/: memory_exhaust.cc
cpp/mmap/: memory_mapped_file.cc
cpp/monads/: CMakeLists.txt  continuation_monad_1.cc  continuation_monad_2.cc
cpp/signal_handling/: signal_handling.cc
cpp/signals_ipc/: CMakeLists.txt  signals_ipc.v2.c
cpp/thread/: CMakeLists.txt  thread.cc
go/: CMakeLists.txt
go/src/tlmquintino/braveworld/: hello.go
perl/: CMakeLists.txt
perl/classes/: CMakeLists.txt  Employee.pm  Fullname.pm  Person.pm  use_person.pl
perl/method_maker/: CMakeLists.txt
perl/oo.v1/: CMakeLists.txt  Employee.pm  Fullname.pm
perl/oo.v2/: Boss.pm  CMakeLists.txt  Employee.pm  Person.pm  main.pl  use_person.pl
unix/: CMakeLists.txt
unix/file_locking/: CMakeLists.txt
unix/file_size/: file_size.cc
unix/massive_file_append/: CMakeLists.txt  massive_file_append.cc
unix/memory_exhaust/: CMakeLists.txt
unix/mmap/: CMakeLists.txt
unix/signal_handling/: CMakeLists.txt
unix/signals_ipc/: signals_ipc.c
